core: Make the site ready for deployment v0.1.0
Signed-off-by: Noah Knegt <github@noahknegt.com>

--- a/pages/styles/index.css
+++ b/pages/styles/index.css
@@ -51,7 +51,7 @@
   }
 
   .content-container {
-    @apply flex flex-col w-full h-full m-0 overflow-hidden bg-gray-300 dark:bg-gray-700;
+    @apply flex flex-col w-full h-screen m-0 overflow-hidden bg-gray-300 dark:bg-gray-700;
   }
 
   .content-list {
